Fixed rule color and letter spacing for score types.

--- a/profile-card-component-main/css/styles.css
+++ b/profile-card-component-main/css/styles.css
@@ -20,6 +20,7 @@ body {
 
 hr {
   margin: 1.5rem;
+  border: 1px solid #ededed;
 }
 
 .age {
@@ -65,6 +66,7 @@ hr {
   overflow: hidden;
   width: 43.75rem;
   height: 50rem;
+  margin-top: -7rem;
 }
 
 .profile-pic {
@@ -88,6 +90,7 @@ hr {
   font-size: 11px;
   font-weight: 400;
   margin-top: 1.6rem;
+  letter-spacing: 0.2rem;
 }
 
 .score-box {
